--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,11 +9,11 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/coolicon2"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="ExampleActivity"
+            android:name="Main"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
