--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@ $RECYCLE.BIN/
 *.msm
 *.msp
 
+# binary
+/bin
+/gen
+
 # =========================
 # Operating System Files
 # =========================
@@ -26,8 +30,7 @@ $RECYCLE.BIN/
 .LSOverride
 
 # Icon must end with two \r
-Icon
-
+Icon
 # Thumbnails
 ._*
 
