--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,8 +17,16 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        
+        <activity
+            android:name="Menu"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="com.example.coolmenu.SPLASH" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
     </application>
