--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,7 +25,7 @@
             android:name="Menu"
             android:label="@string/app_name" >
             <intent-filter>
-                <action android:name="com.example.coolmenu.SPLASH" />
+                <action android:name="com.example.coolmenu.MENU" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
