--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="Main"
+            android:name="main"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,7 +22,7 @@
         </activity>
         
         <activity
-            android:name="Menu"
+            android:name="menu"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="com.example.coolmenu.MENU" />
